--- a/publishing/index.html
+++ b/publishing/index.html
@@ -37,6 +37,7 @@
     <link href="css/style-responsive.css" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="css/parallax-slider/parallax-slider.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <script type="text/javascript" src="js/parallax-slider/modernizr.custom.28468.js">
     </script>
 
@@ -59,13 +60,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html">A<span>cme</span></a>
+              <a class="navbar-brand" href="index.html">
+                <img src="img/logo3.png" ></img>
+                </a>
           </div>
           <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                   <li class="dropdown">
                       <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
-                      "dropdown" data-toggle="dropdown" href="index.html">Home <i class="fa fa-angle-down"></i>
+                      "dropdown" data-toggle="dropdown" href="index.html">교육원안내 <i class="fa fa-angle-down"></i>
                       </a>
                       <ul class="dropdown-menu">
                           <li>
@@ -81,7 +84,7 @@
                   </li>
                   <li class="dropdown">
                       <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
-                      "dropdown" data-toggle="dropdown" href="#">Feature <i class="fa fa-angle-down"></i>
+                      "dropdown" data-toggle="dropdown" href="#">교육신청 <i class="fa fa-angle-down"></i>
                       </a>
                       <ul class="dropdown-menu">
                           <li>
@@ -125,7 +128,7 @@
                   </li>
                   <li class="dropdown">
                       <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
-                      "dropdown" data-toggle="dropdown" href="#">Pages <i class="fa fa-angle-down"></i>
+                      "dropdown" data-toggle="dropdown" href="#">드림재가복지센터 <i class="fa fa-angle-down"></i>
                       </a>
                       <ul class="dropdown-menu">
                           <li>
@@ -171,7 +174,7 @@
                   </li>
                   <li class="dropdown">
                       <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
-                      "dropdown" data-toggle="dropdown" href="#">Portfolio <i class="fa fa-angle-down"></i>
+                      "dropdown" data-toggle="dropdown" href="#">커뮤니티 <i class="fa fa-angle-down"></i>
                       </a>
                       <ul class="dropdown-menu">
                           <li>
@@ -190,7 +193,7 @@
                   </li>
                   <li class="dropdown">
                       <a class="dropdown-toggle" data-close-others="false" data-delay="0" data-hover=
-                      "dropdown" data-toggle="dropdown" href="#">Blog <i class="fa fa-angle-down"></i>
+                      "dropdown" data-toggle="dropdown" href="#">요양보호사 구인/구직 <i class="fa fa-angle-down"></i>
                       </a>
                       <ul class="dropdown-menu">
                           <li>
@@ -225,11 +228,10 @@
               <div class="row">
                 <div class="col-md-12">
               <h2>
-                <i>CLEAN &amp; FRESH</i>
+                <i class="da-slide-font1">드림요양보호사</i>
                 <br>
-                <i>RESPONSIVE</i>
+                <i>교육원</i>
                 <br>
-                <i>DESIGN</i>
               </h2>
               <p>
                 <i>Lorem ipsum dolor amet</i>
@@ -240,7 +242,7 @@
                 Read more
               </a>
               <div class="da-img">
-                <img src="img/parallax-slider/images/2.png" alt="image01" />
+                <img src="img/parallax-slider/images/slide-img1.png" alt="image01" />
               </div>
             </div>
           </div>
