--- a/publishing/index.html
+++ b/publishing/index.html
@@ -228,21 +228,23 @@
               <div class="row">
                 <div class="col-md-12">
               <h2>
-                <i class="da-slide-font1">드림요양보호사</i>
+                <i class="da-slide-font1">드림</i>
                 <br>
-                <i>교육원</i>
-                <br>
+                <i class="da-slide-font1">요양보호사교육원</i>
+                <br />
+                <i>국가자격증 취득</i>
+                <br />
               </h2>
               <p>
-                <i>Lorem ipsum dolor amet</i>
+                <!-- <i>Dream Care Worker Academy</i>
                 <br />
-                <i>veniam omnis</i>
+                <i>Acquisition of a national certificate</i> -->
               </p>
               <a href="#" class="btn btn-info btn-lg da-link">
-                Read more
+                자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
               </a>
               <div class="da-img">
-                <img src="img/parallax-slider/images/slide-img1.png" alt="image01" />
+                <img id="slide-img1" src="img/parallax-slider/images/slide-img1.png" alt="드림요양보호사교육원" />
               </div>
             </div>
           </div>
@@ -255,22 +257,22 @@
         <div class="row">
           <div class="col-md-12">
         <h2>
-          <i>RESPONSIVE VIDEO</i>
-            <br />
-          <i>SUPPORT AND</i>
-            <br />
-          <i>MANY MORE</i>
+          <i class="da-slide-font1">드림</i>
+          <br>
+          <i class="da-slide-font1">재가복지센터</i>
+          <br>
+          <i>방문요양서비스</i>
         </h2>
         <p>
-          <i>Lorem ipsum dolor amet</i>
+          <!-- <i>Dream Home Welfare Center</i>
             <br />
-          <i>tempor incididunt ut</i>
+          <i>visiting care</i> -->
         </p>
         <a href="#" class="btn btn-info btn-lg da-link">
-          Read more
+          자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
         </a>
         <div class="da-img">
-          <img src="img/parallax-slider/images/3.png" alt="image01" />
+          <img id="slide-img2" src="img/parallax-slider/images/slide-img2.png" alt="재가복지센터이미지" />
         </div>
       </div>
           </div>
@@ -283,24 +285,22 @@
         <div class="row">
           <div class="col-md-12">
         <h2>
-          <i>USING BEST WEB</i>
-            </br>
-          <i>SOLUTIONS WITH</i>
-            </br>
-          <i>HTML5/CSS3</i>
+          <i class="da-slide-font1">드림</i>
+          <br>
+          <i class="da-slide-font1">재가복지센터</i>
+          <br>
+          <i>방문목욕</i>
         </h2>
         <p>
-          <i>Lorem ipsum dolor amet</i>
+          <!-- <i>Dream Home Welfare Center</i>
           <br />
-          <i>tempor incididunt ut</i>
-          <br />
-          <i>veniam omnis </i>
+          <i>visiting bath car</i> -->
         </p>
         <a href="#" class="btn btn-info btn-lg da-link">
-          Read more
+          자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
         </a>
         <div class="da-img">
-          <img src="img/parallax-slider/images/1.png" alt="image01" />
+          <img id="slide-img3" src="img/parallax-slider/images/slide-img3.png" alt="재가복지센터이미지" />
         </div>
       </div>
       </div>
