230117 작업완료본

--- a/publishing/index.html
+++ b/publishing/index.html
@@ -328,9 +328,9 @@
       <div class="row mar-b-50">
         <div class="col-md-12">
           <div class="text-center feature-head wow fadeInDown">
-            <h1 class="" >
+            <!-- <h1 class="" >
               Welcome
-            </h1>
+            </h1> -->
 
           </div>
 
@@ -425,37 +425,37 @@
     <div class="container">
 
       <div class="row mar-b-60">
-        <div class="col-lg-6" id="contact-box">
+        <div class="col-lg-6 contact-box" id="">
           <!--testimonial start-->
-          <h1 id="contact-h1">고객센터</h1>
+          <h1 id="contact-h1">상담문의</h1>
           <h3 class="contact-num">Mobile.&nbsp&nbsp&nbsp<a href="javascript:;" >010·2466·9271 </a></h3>
           <h3 class="contact-num">TEL.&nbsp&nbsp&nbsp<a href="javascript:;" >031·505·0191 </a></h3>
           <h3 class="contact-email-h3">Email.&nbsp&nbsp&nbsp<a href="javascript:;" class="email-txt2">dreamedu0191@naver.com</a></h3>
           <!--testimonial end-->
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 " >
           <!--tab start-->
-          <section class="tab wow fadeInLeft">
+          <section class="tab wow fadeInLeft contact-box">
             <header class="panel-heading tab-bg-dark-navy-blue">
               <ul class="nav nav-tabs nav-justified ">
                 <li class="active">
-                  <a data-toggle="tab" href="#news">
+                  <a class="nav-tabs-custom-a" data-toggle="tab" href="#news">
                     최신뉴스
                   </a>
                 </li>
                 <li>
-                  <a data-toggle="tab" href="#events">
+                  <a class="nav-tabs-custom-a" data-toggle="tab" href="#events">
                     공지사항
                   </a>
                 </li>
                 <li class="">
-                  <a data-toggle="tab" href="#notice-board">
+                  <a class="nav-tabs-custom-a" data-toggle="tab" href="#notice-board">
                     상담안내
                   </a>
                 </li>
               </ul>
             </header>
-            <div class="panel-body">
+            <div class="panel-body panel-body-custom">
               <div class="tab-content tasi-tab">
                 <div id="news" class="tab-pane fade in active">
                   <article class="media">
@@ -550,9 +550,9 @@
                 </div>
                 <div id="notice-board" class="tab-pane fade">
                   
-                  <h2><i class="fa fa-mobile pr-10"></i>Mobile : (010) 2466-9271 </h2>
-                  <h2><i class="fa fa-phone pr-10"></i>Phone : (031) 505-0191 </h2>
-                  <h2><i class="fa fa-envelope pr-10"></i>Email :   <a href="javascript:;" style="color: #48cfad;">dreamedu0191@naver.com</a></h2>
+                  <h2>월 ~ 금 - 8am to 17pm</h2>
+                  <h2>토요일 - 9am to 13pm</h2>
+                  <h2>일요일 - Closed</h2>
                 </div>
               </div>
             </div>
