요양보호사방문 페이지 구성진행중

--- a/publishing/index.html
+++ b/publishing/index.html
@@ -72,6 +72,12 @@
                       </a>
                       <ul class="dropdown-menu">
                           <li>
+                            <a href="Welcome-Ceo.html">인사말</a>
+                          </li>
+                          <li>
+                            <a href="index.html">오시는길</a>
+                          </li>
+                          <li>
                               <a href="index.html">Home Parallax</a>
                           </li>
                           <li>
@@ -132,7 +138,7 @@
                       </a>
                       <ul class="dropdown-menu">
                           <li>
-                              <a href="about.html">방문요양서비스</a>
+                              <a href="HomeCareCenter-People.html">방문요양서비스</a>
                           </li>
                           <li>
                               <a href="about.html">방문목욕서비스</a>
@@ -217,7 +223,7 @@
                       </ul>
                   </li>
                   <li>
-                      <a href="contact.html">Contact</a>
+                      <a href="contact.html">온라인상담</a>
                   </li>
                   <li><input class="form-control search" placeholder=" Search" type="text"></li>
               </ul>
@@ -234,11 +240,11 @@
               <div class="row">
                 <div class="col-md-12">
               <h2>
-                <i class="da-slide-font1">드림</i>
+                <i class="da-slide-font1 da-slide-font-common">드림</i>
                 <br>
-                <i class="da-slide-font1">요양보호사교육원</i>
+                <i class="da-slide-font1 da-slide-font-common">요양보호사교육원</i>
                 <br />
-                <i>국가자격증 취득</i>
+                <i class="da-slide-font-common">국가자격증 취득</i>
                 <br />
               </h2>
               <p>
@@ -263,11 +269,11 @@
         <div class="row">
           <div class="col-md-12">
         <h2>
-          <i class="da-slide-font1">드림</i>
+          <i class="da-slide-font1 da-slide-font-common">드림</i>
           <br>
-          <i class="da-slide-font1">재가복지센터</i>
+          <i class="da-slide-font1 da-slide-font-common">재가복지센터</i>
           <br>
-          <i>방문요양서비스</i>
+          <i class="da-slide-font-common">방문요양서비스</i>
         </h2>
         <p>
           <!-- <i>Dream Home Welfare Center</i>
@@ -291,11 +297,11 @@
         <div class="row">
           <div class="col-md-12">
         <h2>
-          <i class="da-slide-font1">드림</i>
+          <i class="da-slide-font1 da-slide-font-common">드림</i>
           <br>
-          <i class="da-slide-font1">재가복지센터</i>
+          <i class="da-slide-font1 da-slide-font-common">재가복지센터</i>
           <br>
-          <i>방문목욕서비스</i>
+          <i class="da-slide-font-common">방문목욕서비스</i>
         </h2>
         <p>
           <!-- <i>Dream Home Welfare Center</i>
@@ -390,31 +396,50 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-sm-6 text-center wow fadeInLeft">
-            <img src="img/tab1.png" alt="">
+            <img src="img/property-img1.png" alt="" width="400" height="510">
           </div>
           <div class="col-lg-6 col-sm-6 wow fadeInRight">
             <h1>
-              Mobile ready
+              Dream
             </h1>
             <hr>
             <p>
-              <i class="fa fa-check fa-lg pr-10">
-              </i>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener. natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener. natus error sit voluptatem accusantiu.
+              <div class="property-title-box">
+                <i class="fa fa-check fa-lg pr-10"></i>
+                <span class="property-title">드림요양보호사교육원</span>
+              </div>
+              <div class="property-dec">
+              노노(老老)케어 시대에 필수가 된 요양보호사 자격증을 취득할 수 있는 교육원입니다.
+              일반 수강생/ 국비지원 내일배움카드 모두 수강신청 하실 수 있습니다.
+              160시간동안 수업이수, 80시간 실습을 모두 마친 후 자격증시험응시가 가능합니다.
+              </div>
             </p>
             <p>
-              <i class="fa fa-check fa-lg pr-10">
-              </i>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener. natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener. natus error sit voluptatem accusantiu.
+              <div class="property-title-box">
+                <i class="fa fa-check fa-lg pr-10"></i>
+                <span class="property-title">드림재가복지센터(방문요양)</span>
+              </div>
+              <div class="property-dec">
+              거동이 불편하거나 일상생활이 어려운 65세이상 중 장기요양등급을 받으신 분들에게 
+              집으로 찾아가는 방문서비스를 제공합니다.
+              가사 및 일상생활 도움, 개인위생도움등을 제공합니다.
+              </div>
             </p>
             <p>
-              <i class="fa fa-check fa-lg pr-10">
-              </i>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ablic jiener.
+              <div class="property-title-box">
+                <i class="fa fa-check fa-lg pr-10"></i>
+                <span class="property-title">드림재가복지센터(방문목욕)</span>
+              </div>
+              <div class="property-dec">
+                거동이 불편하여 집에서 목욕이 어려운 65세이상 중 장기요양등급을 받으신 분들에게 
+                집으로 목욕차가 찾아가는 서비스를 제공합니다.
+                넓고 쾌적한 목욕차에서 목욕전문 요양보호사가 따뜻한 목욕서비스를 제공합니다.
+              </div>
+              
             </p>
             <hr>
             <a href="javascript:;" class="btn btn-purchase">
-              Purchase now
+              상담신청&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》 <!--Contact랑 연결-->
             </a>
           </div>
         </div>
@@ -433,9 +458,9 @@
           <h3 class="contact-email-h3">Email.&nbsp&nbsp&nbsp<a href="javascript:;" class="email-txt2">dreamedu0191@naver.com</a></h3>
           <!--testimonial end-->
         </div>
-        <div class="col-lg-6 " >
+        <div class="col-lg-6" >
           <!--tab start-->
-          <section class="tab wow fadeInLeft contact-box">
+          <section class="tab wow fadeInLeft contact-box news-box">
             <header class="panel-heading tab-bg-dark-navy-blue">
               <ul class="nav nav-tabs nav-justified ">
                 <li class="active">
@@ -460,43 +485,49 @@
                 <div id="news" class="tab-pane fade in active">
                   <article class="media">
                     <a class="pull-left thumb p-thumb">
-                      <img src="img/product1.jpg" alt="">
+                      <img src="img/news/news-img1.jpeg" alt="결혼기념선행">
                     </a>
                     <div class="media-body b-btm">
-                      <a href="#" class=" p-head">
-                        News Tittle goes here
+                      <a href="http://www.incheonilbo.com/news/articleView.html?idxno=1128552" class=" p-head" target="_blank">
+                        딸 결혼 기념 따뜻한 선행…안산 취약층에 성금
                       </a>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        안산 드림재가복지센터 정의숙 대표(전 안산시 단원구 중앙동 주민자치위원장)가 딸 결혼식을 기념해 취약가정을 위한 이웃돕기 성금 200만원을....
                       </p>
                     </div>
                   </article>
                   <article class="media">
                     <a class="pull-left thumb p-thumb">
-                      <img src="img/product2.jpg" alt="">
+                      <img src="img/news/news-img2.jpeg" alt="안산시여성상·양성평등">
                     </a>
                     <div class="media-body b-btm">
-                      <a href="#" class=" p-head">
-                        News Tittle goes here 2
+                      <a href="http://www.todayansan.co.kr/news/articleView.html?idxno=18781" class=" p-head" target="_blank">
+                        안산시여성상·양성평등 유공 시상
                       </a>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. simsut dorlor
+                        안산시는 6일 여성권익을 높이고 양성평등 사회조성에 기여한 여성 시민 10명을 선발해 시상했다.
+올해로 35번째를 맞은 안산시여성상은......
                       </p>
                     </div>
                   </article>
                   <article class="media">
                     <a class="pull-left thumb p-thumb">
-                      <img src="img/product1.jpg" alt="">
+                      <img src="img/news/news-img3.jpeg" alt="목욕서비스시작">
                     </a>
                     <div class="media-body b-btm">
-                      <a href="#" class=" p-head">
-                        News Tittle goes here 3
+                      <a href="http://www.todayansan.co.kr/news/articleView.html?idxno=17399" class=" p-head" target="_blank">
+                        드림재가복지센터-고잔16단지 LH주거행복지원센터, 목욕서비스 시작
                       </a>
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. sumon ahmed
+                        드림재가복지센터(대표 정의숙)와 안산고잔16단지 LH주거행복지원센터(센터장 홍정화)가 업무협약을 체결하고 어르신들의 ....
                       </p>
                     </div>
                   </article>
+                  <div class="news-more-btn">
+                    <a href="#" class="btn btn-info btn-sm da-link">
+                      더보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
+                    </a>
+                  </div>
                 </div>
                 <div id="events" class="tab-pane fade">
                   <article class="media">
@@ -508,7 +539,6 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       </a>
                       <p>
-
                         <i class="fa fa-time">
                         </i>
                         1 hours ago
@@ -646,70 +676,70 @@
         <div class="row">
           <div class="col-md-12">
             <h2>
-              In case you need any help
             </h2>
           </div>
 
           <div class="col-md-4">
             <div class="h-service">
-              <div class="icon-wrap ico-bg round-fifty wow fadeInDown">
-                <i class="fa fa-question">
+              <div class="icon-wrap ico-bg round-fifty wow fadeInDown help-icon1">
+                <i class="fa fa-pencil-square-o help-icon-area1">
                 </i>
               </div>
               <div class="h-service-content wow fadeInUp">
                 <h3>
-                  PRESALE QUESTION
+                  요양보호사교육원
                 </h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim  laborum.
-                  <br>
-                  <a href="#">
-                    Learn more
-                  </a>
+                  <span class="help-subtitle">국가자격증취득</span><br/> 요양보호사자격증 취득을 원하시는분
+                  <br/>
                 </p>
+                <div class="help-more-box">
+                  <a href="#">
+                    more&nbsp&nbsp▶
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-service">
-              <div class="icon-wrap ico-bg round-fifty wow fadeInDown">
-                <i class="fa fa-h-square">
+              <div class="icon-wrap ico-bg round-fifty wow fadeInDown help-icon1">
+                <i class="fa fa-home help-icon-area2">
                 </i>
               </div>
               <div class="h-service-content wow fadeInUp">
                 <h3>
-                  NEED SUPPORT?
+                  방문요양 서비스
                 </h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim  laborum.
-                  <br>
-                  <a href="#">
-                    Learn more
-                  </a>
+                 <span class="help-subtitle">요양보호사 파견</span> <br/>방문 및 돌봄 서비스가 필요하신분
                 </p>
+                <div class="help-more-box">
+                  <a href="#">
+                    more&nbsp&nbsp▶
+                  </a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-service">
-              <div class="icon-wrap ico-bg round-fifty wow fadeInDown">
-                <i class="fa fa-users">
+              <div class="icon-wrap ico-bg round-fifty wow fadeInDown help-icon1">
+                <i class="fa fa-truck help-icon-area3">
                 </i>
               </div>
               <div class="h-service-content wow fadeInUp">
                 <h3>
-                  CHECK FORUM
+                  방문목욕 서비스
                 </h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua. Ut enim  laborum.
-                  <br>
-                  <a href="#">
-                    Learn more
-                  </a>
+                  <span class="help-subtitle">방문목욕 서비스</span><br/> 목욕차량 및 요양보호사 방문이 필요하신분
                 </p>
+                <div class="help-more-box">
+                  <a href="#">
+                    more&nbsp&nbsp▶
+                  </a>
+                </div>
               </div>
             </div>
           </div>
