Footer 완성(230127 완료본) 교육원 Dtl 작업필요

--- a/publishing/Detail-People.html
+++ b/publishing/Detail-People.html
@@ -29,7 +29,7 @@
       <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet" />
-    <link href="css/HomeCareCenter-People.css" rel="stylesheet">
+    <link href="css/Detail-People.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
