--- a/publishing/Detail-People.html
+++ b/publishing/Detail-People.html
@@ -263,6 +263,26 @@
             </div>
         </div>
     </div>
+
+    <!--방문요양 소개글-->
+
+    <div class="container">
+      <div class="col-md-12">
+          <p class="introduce-p-set1">
+            저희 드림요양보호사교육원은 현직 간호사 강사와 재가복지센터의 운영자, 다른요양보호사교육원의 
+            원장님 등 다양한 강사진으로 구성되어 질높은 교육을 진행하고 있습니다.
+
+            지역의 여러 업체들과의 협약을 통한 시니어사업 시스템을 구축하기 위해 노력하고 있습니다.
+            현재 방문요양, 방문목욕, 교육원에 이르기까지 다양한 서비스를 제공하고 있으며 더 많은 곳과 함께하기 위해 노력하고 있습니다.
+          </p>
+      </div>
+  </div>
+   <!--재가급여월 한도액 Title end-->
+
+
+
+
+
     <!--재가급여월 한도액 Title-->
 
     <div class="container">
