--- a/publishing/Welcome-Ceo.html
+++ b/publishing/Welcome-Ceo.html
@@ -28,6 +28,7 @@
       <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-responsive.css" rel="stylesheet" />
+    <link href="css/Welcome-Ceo.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
@@ -264,127 +265,47 @@
     <!--breadcrumbs end-->
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="pf-img">
-                     <img src="img/blog/img6.jpg" alt="" height="500">
-                 </div>
-
-            </div>
+        <div class="col-lg-12 welcome-p">
+            <p>대표 인사말</p>
+        </div>
+        <div class="col-lg-12 welcome-sub-p">
+            <p>꿈을 향해 달리는 드림요양보호사교육원/드림재가복지센터</p>
         </div>
     </div>
 
-    <!--container start-->
-    <div class="container">
-        <div class="row">
-            <!--portfolio-single start-->
-
-            <div class="col-lg-9 ">
-                <div class="title">
-                    <h3>Mirum est notare quam littera gothica</h3>
-                    <hr>
-                </div>
-                <div class="pf-detail">
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                    </p>
-                </div>
-                <p><button class="btn bg-maroon margin"><i class="fa fa-external-link pr-5"></i>Preview</button></p>
-            </div>
-
-            <div class="col-lg-3">
-                <div class="title">
-                    <h3>Product details</h3>
-                    <hr>
-                </div>
-                <ul class="list-unstyled pf-list">
-                    <li><i class="fa fa-arrow-circle-right pr-10"></i><b>Client: </b> <span><a href="#">wrapbootstrap</a></span></li>
-                    <li><i class="fa fa-arrow-circle-right pr-10"></i><b>Skills: </b><span><a href="#">WordPress</a>, <a href="#">HTML5</a></span></li>
-                    <li><i class="fa fa-arrow-circle-right pr-10"></i><b>Colors: </b><span>blue, gray, purple</span></li>
-                    <li><i class="fa fa-arrow-circle-right pr-10"></i><b>Release Date: </b><span>06 January, 2014</span></li>
-                    <li><i class="fa fa-arrow-circle-right pr-10"></i><b>Launch Project: </b><span><a href="www.wrapbootstrap.com">wrapbootstrap</a></span></li>
-                </ul>
-             </div>
+    <div class="container intro-main-box">
+        <div class="col-lg-4 ceo-img-set">
+            <img src="img/ceo-img.png">
         </div>
-        <ul class="pager">
-          <li class="previous"><a href="#">&larr; Older</a></li>
-          <li class="next"><a href="#">Newer &rarr;</a></li>
-        </ul>
-        <hr>
+        <div class="col-lg-8">
+            <div class="intro-p">
+                <p>안녕하세요. <br> 드림요양보호사교육원/드림재가복지센터를 방문해 주셔서 감사드립니다.</p>
+                <p>우리는 지금 고령화시대로 달려가고 있습니다. 사람은 누구나 늙어갑니다.<br>
+                젋은 지금우리는 타인의 돌봄을 귀찮게 여길 수 있지만, 나이가 들어 노년의 시기가 오면<br>
+                우리모두는 누군가의 도움을 절대적으로 필요로 할 것입니다.
+                </p>
+                <p>
+                    이에 우리나라에서는 요양보호사라는 직업을 만들어 거동이 불편한 어르신을 전문적으로 <br>
+                    돌봐드리는 노인장기요양보험제도를 시행 중에 있습니다.
+                </p>
+                <p>저희 드림요양보호사교육원/드림재가복지센터는 2016년에 시작하여 지금까지 수많은 <br>
+                요양보호사 선생님을 배출하고 있습니다.<br>
+                모두 사명감과 봉사정신, 노인공격의 마음을 가지고 일터로 나가 맡은 바 일을 해내고 계십니다.
+                </p>
+                <p>
+                    이에 저희는 이러한 직업정신을 가진 요양보호사를 양성하는 것을 목적으로 교육중에 있습니다.<br>
+                    가족같은 편안한 분위기로 교육받는 모든분이 행복한 교육 기관과 일하는 모든분이 보람있는 <br>
+                    재가복지센터가 되기위해 노력하겠습니다.
+                </p>
+                <p>
+                    감사합니다.
+                </p>
+            </div>
+            <div class="intro-p sign">
+                대표 정의숙
+            </div>
+        </div>
     </div>
-
-    <div class="container">
-         <!--recent work start-->
-        <div class="row">
-            <div class="col-lg-12 recent">
-                <h3>Related Work</h3>
-                <p>Some of our work we have done earlier</p>
-                <div id="owl-demo" class="owl-carousel owl-theme wow fadeIn">
-
-                  <div class="item view view-tenth">
-                    <img src="img/works/img8.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="portfolio-single-image.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                  <div class="item view view-tenth">
-                    <img src="img/works/img9.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="portfolio-single-image.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                  <div class="item view view-tenth">
-                    <img src="img/works/img10.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="portfolio-single-image.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                  <div class="item view view-tenth">
-                    <img src="img/works/img11.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="portfolio-single-image.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                  <div class="item view view-tenth">
-                    <img src="img/works/img12.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="blog_detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                  <div class="item view view-tenth">
-                    <img src="img/works/img13.jpg" alt="work Image">
-                    <div class="mask">
-                        <a href="blog_detail.html" class="info" data-toggle="tooltip" data-placement="top" title="Details">
-                        <i class="fa fa-link"></i>
-                        </a>
-                    </div>
-                  </div>
-                </div>
-            </div>
-        </div>
-        <!--recent work end-->
-     </div>
 
      <!--footer start-->
      <footer class="footer">
