--- a/publishing/index.html
+++ b/publishing/index.html
@@ -75,16 +75,16 @@
                             <a href="Welcome-Ceo.html">인사말</a>
                           </li>
                           <li>
-                            <a href="index.html">오시는길</a>
+                            <a href="Contacts.html">오시는길</a>
                           </li>
                           <li class="dropdown-submenu">
                             <a href="#" tabindex="-1">국가자격증취득</a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="#">내국인</a>
+                                    <a href="Introduce-Card-Local.html">내국인</a>
                                 </li>
                                 <li>
-                                    <a href="#">외국인</a>
+                                    <a href="Introduce-Card-Foreigner.html">외국인</a>
                                 </li>
                             </ul>
                         </li>
@@ -783,51 +783,44 @@
           <ul class="bxslider1 clients-list">
             <li>
               <a href="#">
-                <img src="img/clients/partner1-img-black.png" alt="" />
+                <img src="img/clients/partner1-img-black.png" alt="국민건강보험공단b" />
 
-                <img src="img/clients/partner1-img-color.png" class="color-img" alt="" />
+                <img src="img/clients/partner1-img-color.png" class="color-img" alt="국민건강보험공단c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner2-img-black.png" alt="" />
+                <img src="img/clients/partner3-img-black.png" alt="고용노동부b" />
 
-                <img src="img/clients/partner2-img-color.png" class="color-img" alt="" />
+                <img src="img/clients/partner3-img-color.png" class="color-img" alt="고용노동부c"/>
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/partner3-img-black.png" alt="" />
+                <img src="img/clients/partner2-img-black.png" alt="노인장기요양보험b" />
 
-                <img src="img/clients/partner3-img-color.png" class="color-img" alt="" />
+                <img src="img/clients/partner2-img-color.png" class="color-img" alt="노인장기요양보험c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/graylogo6.png" alt="" />
+                <img src="img/clients/partner4-img-black.png" alt="직업포털훈련b" />
 
-                <img src="img/clients/newlogo6.png" class="color-img" alt="" />
+                <img src="img/clients/partner4-img-color.png" class="color-img" alt="직업포털훈련c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/graylogo6.png" alt="" />
+                <img src="img/clients/partner5-img-black.png" alt="워크넷b" />
 
-                <img src="img/clients/newlogo6.png" class="color-img" alt="" />
+                <img src="img/clients/partner5-img-color.png" class="color-img" alt="워크넷c" />
               </a>
             </li>
             <li>
               <a href="#">
-                <img src="img/clients/graylogo6.png" alt="" />
+                <img src="img/clients/partner6-img-black.png" alt="안산시일자리센터b" />
 
-                <img src="img/clients/newlogo6.png" class="color-img" alt="" />
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <img src="img/clients/graylogo6.png" alt="" />
-
-                <img src="img/clients/newlogo6.png" class="color-img" alt="" />
+                <img src="img/clients/partner6-img-color.png" class="color-img" alt="안산시일자리센터c" />
               </a>
             </li>
 
