--- a/publishing/Online-Consulting.html
+++ b/publishing/Online-Consulting.html
@@ -253,14 +253,14 @@
         <div class="row">
           <div class="col-lg-4 col-sm-4">
             <h1>
-              Contacts
+              온라인 상담
             </h1>
           </div>
           <div class="col-lg-8 col-sm-8">
             <ol class="breadcrumb pull-right">
               <li>
                 <a href="#">
-                  Contacts
+                  온라인상담
                 </a>
               </li>
               
@@ -274,7 +274,8 @@
 
     <!--온라인상담 -title-start-->
     <div class="container">
-        <p class="counsulting-p-set1">상담신청을 남겨주세요.<br> 확인 후 담당자가 연락드리도록하겠습니다.</p>
+        <p class="counsulting-p-set1">상담신청을 남겨주세요.</p>
+        <p class="counsulting-p-set1">확인 후 담당자가 연락드리도록하겠습니다.</p>
     </div>
     <!--온라인상담 -title-end-->
 
@@ -289,11 +290,11 @@
             <div class="consult-table-box1">
               <table class="consult-table-set1">
                 <tr>
-                  <td>이름</td>
+                  <td>이&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp름</td>
                   <td><input id="consult-desc" placeholder="" type="text"></td>
                 </tr>
                 <tr>
-                  <td>연 락 처</td>
+                  <td>연&nbsp&nbsp락&nbsp&nbsp처</td>
                   <td><input id="consult-desc" placeholder="" type="text"></td>
                 </tr>
                 <tr>
@@ -303,7 +304,7 @@
                 <tr>
                   <td></td>
                   <td>
-                    <a class="btn btn-purchase btn-consult">전 송 하 기</a>
+                    <a class="btn btn-purchase btn-consult">전송하기</a>
                   </td>
                 </tr>
               </table>
@@ -316,9 +317,9 @@
           <div class="main-txt">
             드림요양보호사교육원 오시는 길
           </div>
-          <div class="main-box">
+          <div class="main-box2">
             <a target="_blank" href="https://map.naver.com/v5/search/%EC%95%88%EC%82%B0%20%EB%93%9C%EB%A6%BC%EC%9A%94%EC%96%91%EB%B3%B4%ED%98%B8%EC%82%AC/place/38500791?c=16.3,0,0,0,dh">
-              <img src="img/map-img.png" alt="드림요양보호사교육원네이버" width="100%" height="100%">
+              <img src="img/consult-map-img.png" alt="드림요양보호사교육원네이버" width="100%" height="100%">
             </a>
           </div>
         </div>
